Documentation and edit python file

--- a/Premyy.ipynb
+++ b/Premyy.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5a9ddaa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Nigel Groen\n",
+    "\n",
+    "Premier League match predictor built in Python using pandas and scikit-learn. Uses data from matches.csv to predict matches from 2020-2022 seasons."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "d4362f46-e39a-4188-927d-03d5eee9f6b0",
    "metadata": {},
